Fixed SEO keywords, fixed alignments. Added donation addresses.

--- a/main.css
+++ b/main.css
@@ -14,7 +14,22 @@
     transition-duration: 0.4s;
     border-radius: 10px;
 }
+/*---------------------------SCROLL BAR-------------------------*/
+::-webkit-scrollbar{
+    width: 12px;
 
+}
+::-webkit-scrollbar-track{
+    background:rgba(254, 223, 255, 0.7);
+    
+}
+::-webkit-scrollbar-thumb{
+    background:rgba(75, 255, 240, 0.6);
+}
+::webkit-scrollbar-thumb:hover{
+    background: #b3ffff;
+}
+/*--------------------------END OF SCROLL BAR-------------------*/
 .button:hover {
     box-shadow: 0px 0px 12px #7a3b3b;
     border-radius: 20px;
@@ -31,7 +46,9 @@ h2 {
     font-size: 30px;
     text-align: center;
 }
-
+h4{
+    color: white;
+}
 p {
     position: fixed;
     bottom: 0;
@@ -62,10 +79,6 @@ li {
 a {
     text-decoration: none;
     color: white;
-}
-
-#logo {
-    border-radius: 100%;
 }
 
 body {
@@ -158,6 +171,6 @@ html{
 }
 
 #nav:hover {
-    animation-name: navcursor;
-    color: rgb(228, 74, 47);
+    color: rgb(255, 66, 66);
+    transition-duration: .45s;
 }
